Started with the implementation of the method to revert a record